--- a/arch/arm/plat-omap/Kconfig
+++ b/arch/arm/plat-omap/Kconfig
@@ -239,6 +239,10 @@ config OMAP_PM_NONE
 config OMAP_PM_NOOP
 	bool "No-op/debug PM layer"
 
+config OMAP_PM_SRF
+	depends on PM
+	bool "PM layer implemented using SRF"
+
 endchoice
 
 endmenu
