--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -358,6 +358,14 @@ config VIDEO_ADP1653
 	  This is a driver for the ADP1653 flash.  It is used for
 	  example in Nokia RX51.
 
+config VIDEO_MT9P012
+	tristate "Micron MT9P012 raw sensor driver (5MP)"
+	depends on I2C && VIDEO_V4L2
+	---help---
+	  This is a Video4Linux2 sensor-level driver for the Micron
+	  MT9P012 camera.  It is currently working with the TI OMAP3
+	  camera controller.
+
 config VIDEO_SAA7110
 	tristate "Philips SAA7110 video decoder"
 	depends on VIDEO_V4L2 && I2C
