V4L2: OMAP: Add ISP resizer wrapper
OMAP3 ISP Resizer wrapper.
This is a char device that shows up as the dev node:
 /dev/omap-resizer
Allows the resizer engine to be used as a stand-alone module from usermode.

Signed-off-by: Dominic Curran <dcurran@ti.com>

--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -904,6 +904,8 @@ config VIDEO_OMAP3
 	---help---
 	  Driver for an OMAP 3 camera controller.
 
+source "drivers/media/video/isp/Kconfig"
+
 config VIDEO_SMIAREGS
 	tristate "Generic SMIA I2C register access and register list helper"
 	depends on I2C
