Zoom2: Camera: Disable HELPER_CHIPS_AUTO option in defconfig
Without this, sensors won't get compiled, becasue kconfig
automatically disables them when HELPER_CHIPS_AUTO is enabled.

Signed-off-by: Sergio Aguirre <saaguirre@ti.com>

--- a/arch/arm/configs/omap_zoom2_defconfig
+++ b/arch/arm/configs/omap_zoom2_defconfig
@@ -862,6 +862,7 @@ CONFIG_VIDEOBUF_GEN=y
 CONFIG_VIDEOBUF_DMA_SG=y
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 
+CONFIG_VIDEO_HELPER_CHIPS_AUTO=n
 CONFIG_VIDEO_IMX046=y
 CONFIG_VIDEO_LV8093=y
 
