DSS2: Add nec panel for zoom display
Nec panel has been added which is used on both
zoom2 and zoom3 boards

Signed-off-by: Kishore Y <kishore.y@ti.com>

--- a/drivers/video/omap2/displays/Kconfig
+++ b/drivers/video/omap2/displays/Kconfig
@@ -31,4 +31,9 @@ config PANEL_TAAL
         help
           Taal DSI command mode panel from TPO.
 
+config PANEL_NEC
+        tristate "NEC Panel"
+        help
+          LCD Panel used in the Zoom2 board
+
 endmenu
